Solved compile errors and added z-index to dropdown

--- a/app/find-person/find-person.scss
+++ b/app/find-person/find-person.scss
@@ -15,6 +15,11 @@ a {
     color: #24A0D8
 }
 
+mark{
+  position:relative;
+  z-index: 0;
+}
+
 #wrapper {
     height: 84%;
     font-family: Arial, "Helvetica Neue", helvetica, sans-serif;
@@ -34,7 +39,7 @@ a {
     -webkit-user-select: none;
     -ms-user-select:none;
     user-select:none;
-    -o-user-select:none
+    -o-user-select:none;
 }
 
 #wrapper-scrollbar {
@@ -102,6 +107,7 @@ a {
   position: absolute;
   margin-left: 481px;
   margin-top: 1px;
+  z-index: 10;
 }
 
 #schools-wrapper ul {
@@ -111,6 +117,7 @@ a {
   border-right: 1px solid #adafb2;
   float: left;
   background-color: #fff;
+
 }
 
 #schools-wrapper li {
@@ -382,8 +389,8 @@ a {
 }
 
 #person-table thead th:first-child {
-  /* border: none;
-  min-width: 0; */
+  border: none;
+  min-width: 0;
 }
 
 #person-table thead th p {
@@ -413,14 +420,11 @@ a {
 }
 
 #person-table tr td:first-child {
-  max-width:100%;
-white-space:nowrap;
-align-content: center;
-  /* border: none !important;
-  color: #2e7cc0; */
+  border: none !important;
+  color: #2e7cc0;
 }
 
-#person-table tr td:nth-child(1), td:nth-child(2) {
+#person-table tr td:nth-child(2), td:nth-child(3) {
   color: #2e7cc0;
 }
 
